--- a/assets/css/extended/theme-vars-override.css
+++ b/assets/css/extended/theme-vars-override.css
@@ -6,7 +6,7 @@
  */
 
 :root {
-  --main-width: clamp(640px, 50vw, 720px);
+  --main-width: 778px;
   --gap: 20px;
   --content-gap: 20px;
   --header-height: 50px;
@@ -15,7 +15,7 @@
   --theme: #fefcf6;
   --entry: #fefcf6;
   --primary: #1a1a1a;
-  --secondary: #2a2a2a;
+  --secondary: #6b6b6b;
   --tertiary: #d6d6d6;
   --content: #1a1a1a;
   --code-bg: #f2f1eb;
@@ -30,7 +30,7 @@
   --theme: #212529;
   --entry: #292e33;
   --primary: #e0e0e0;
-  --secondary: #e0e0e0;
+  --secondary: #999;
   --tertiary: #505050;
   --content: #e0e0e0;
   --code-bg: #2c3034;
@@ -45,7 +45,7 @@
     --theme: #212529;
     --entry: #292e33;
     --primary: #e0e0e0;
-    --secondary: #e0e0e0;
+    --secondary: #999;
     --tertiary: #505050;
     --content: #e0e0e0;
     --code-bg: #2c3034;
